Wed Jan 08 13:37:09 2003  George Lebl <jirka@5z.com>

	* src/Makefile.am, src/gnome-genius.c: move the helper program
	  to libexec

	* src/plugin.[ch], src/plug_api.h, src/Makefile.am,
	  src/gnome-genius.c, src/calc.c, src/plugread.[ch],
	  src/testplugin.c, src/genius.c: attempt to make the plugin
	  stuff a bit more usable and implement the save state and
	  restore state

	* src/calc.c, src/inter.c: use nicer colors on gui version

	* src/gnome-genius.c: fix saving of preferences, port the
	  error/info dialog to new gtk

	* src/eval.c, src/mpwrap.c, src/matrixw.c, src/lexer.l,
	  src/parse.y: fix warnings

	* configure.in: properly enable warnings

Tue Jan 07 18:05:08 2003  George Lebl <jirka@5z.com>

	* src/plug_api.h: minor fixes and a note about the state functions
	  not really working

	* src/testplugin.c: implement some more functionality including
	  adding functions etc...

	* src/gnome-genius.c: some delete/bs fiddling, still not working
	  right for me though.  Also changed the logic for the fifo
	  creation

	* src/calc.c: fix plugin command to avoid an infinite input loop

Tue Jan 07 16:28:34 2003  George Lebl <jirka@5z.com>

	* configure.in: require vte since libzvt is broken and all that

	* src/calc.c: fix green color in help

	* src/genius-readline-helper.c, src/gnome-genius.c: port to vte
	  since libzvt is just giving me fits and we'll all use vte 
	  sooner or later

	* src/Makefile.am, src/gnome-genius.c: rename the readline helper
	  to avoid a hang in case we find an old readline helper hanging
	  around

Fri Jan 03 11:27:21 2003  George Lebl <jirka@5z.com>

	* Release 0.5.1

Fri Jan 03 11:23:38 2003  George Lebl <jirka@5z.com>

	* configure.in: increase version and fixup

	* src/matop.c: stop being confused about REF definition and make the
	  pivots 1 again

	* src/mpwrap.c: Fix two errors pointed out by Kai Arstila
	  <Kai.Arstila@Helsinki.FI>.  First fix rounding when first digit