@@ -38,7 +38,8 @@ gel_readplugin (const char *dir_name, const char *file_name)
 	char *copyright = NULL;
 	char *author = NULL;
 	char *description = NULL;
-	int gui = FALSE;
+	gboolean gui = FALSE;
+	gboolean hide = FALSE;
 	GelPlugin *plg;
 	p = g_strconcat(dir_name,"/",file_name,NULL);
 	fp = fopen(p,"r");
@@ -62,7 +63,9 @@ gel_readplugin (const char *dir_name, const char *file_name)
 		else if(strcmp(buf,"Description")==0)
 			description = g_strdup(g_strstrip(p));
 		else if(strcmp(buf,"GUI")==0)
-			gui = strcmp(g_strstrip(p),"true")==0;
+			gui = g_ascii_strcasecmp(g_strstrip(p),"true")==0;
+		else if(strcmp(buf,"Hide")==0)
+			hide = g_ascii_strcasecmp(g_strstrip(p),"true")==0;
 	}
 	fclose(fp);
 	
@@ -84,5 +87,6 @@ gel_readplugin (const char *dir_name, const char *file_name)
 	plg->author = author;
 	plg->description = description;
 	plg->gui = gui;
+	plg->hide = hide;
 	return plg;
 }
