@@ -5,3 +5,8 @@ Author=George Lebl
 Copyright=Copyright 1999 George Lebl
 File=@libdir@/genius/libtestplugin.so
 GUI=false
+
+# This is so that this plugin doesn't appear in the gui
+# if you write your own plugin it should have Hide=false or
+# just not include this entry
+Hide=true
