@@ -1,3 +1,10 @@
+Thu Jan 09 10:40:42 2003  George Lebl <jirka@5z.com>
+
+	* src/plugread.c, src/plugin.h, src/gnome-genius.c,
+	  src/test.plugin.in:  Add a Hide= entry in the plugin description
+	  and if true don't show the plugin in the gui.  Also if the
+	  plugin menu is empty, then hide the whole toplevel menu.
+
 Wed Jan 08 13:37:09 2003  George Lebl <jirka@5z.com>
 
 	* src/Makefile.am, src/gnome-genius.c: move the helper program
